--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
                                 </span>
                             </td>
                         </tr>
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
                                 </span>
                             </td>
                         </tr>
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0196087">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=azerwyn">azerwyn</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 17:24:27 &nbsp;•&nbsp;
+                                    86 comments &nbsp;•&nbsp;
+                                    103.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17175634">How ‘Authentic Relating’ Made Vulnerability a Movement (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -195,26 +215,6 @@
                                     2018-05-27 08:28:14 &nbsp;•&nbsp;
                                     20 comments &nbsp;•&nbsp;
                                     102.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178192">Middle name initials enhance evaluations of intellectual performance (2014)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://onlinelibrary.wiley.com/doi/abs/10.1002/ejsp.2026">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dmichulke">dmichulke</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 11:40:32 &nbsp;•&nbsp;
-                                    58 comments &nbsp;•&nbsp;
-                                    101.0 points
                                 </span>
                             </td>
                         </tr>
@@ -286,14 +286,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17162887">Mozilla to remove “meritocracy” from governance docs because it's “problematic”</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://groups.google.com/d/msg/mozilla.governance/OQlS6-gUBLQ/u0Em5XKjCAAJ">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=cucumberferity">cucumberferity</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 16:34:20 &nbsp;•&nbsp;
-                                    141 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
+                                    43 comments &nbsp;•&nbsp;
                                     90.0 points
                                 </span>
                             </td>
@@ -306,15 +306,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
+                                    <a href="https://news.ycombinator.com/item?id=17162887">Mozilla to remove “meritocracy” from governance docs because it's “problematic”</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
-                                    43 comments &nbsp;•&nbsp;
-                                    89.0 points
+                                    <a class="node" href="https://groups.google.com/d/msg/mozilla.governance/OQlS6-gUBLQ/u0Em5XKjCAAJ">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=cucumberferity">cucumberferity</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 16:34:20 &nbsp;•&nbsp;
+                                    141 comments &nbsp;•&nbsp;
+                                    90.0 points
                                 </span>
                             </td>
                         </tr>
@@ -466,14 +466,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
+                                    <a href="https://news.ycombinator.com/item?id=17169291">An amateur investigator's hunt for the Zodiac killer</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://lareviewofbooks.org/article/the-serial-killer-as-a-marketing-genius/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 21:51:25 &nbsp;•&nbsp;
+                                    22 comments &nbsp;•&nbsp;
                                     77.0 points
                                 </span>
                             </td>
@@ -486,15 +486,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169291">An amateur investigator's hunt for the Zodiac killer</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://lareviewofbooks.org/article/the-serial-killer-as-a-marketing-genius/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 21:51:25 &nbsp;•&nbsp;
-                                    22 comments &nbsp;•&nbsp;
-                                    76.0 points
+                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
+                                    77.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166861">Writing self-documenting Swift code</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176752">NetBSD: a new version of the CDDL dtrace and ZFS code</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.swiftbysundell.com/posts/writing-self-documenting-swift-code">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 13:45:25 &nbsp;•&nbsp;
-                                    18 comments &nbsp;•&nbsp;
-                                    71.0 points
+                                    <a class="node" href="https://github.com/NetBSD/src/commit/bae129c5e36fe3b2ded1e036fc2f6f12430f55e0">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=algorithm314">algorithm314</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 05:38:51 &nbsp;•&nbsp;
+                                    2 comments &nbsp;•&nbsp;
+                                    72.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 15:00:03.753258</strong>
+            <strong>Last update at 2018-05-29 15:10:03.550662</strong>
         </div>
     </div>
 </div>
