--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172524">Emacs 26.1 released</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 14:19:04 &nbsp;•&nbsp;
+                                    91 comments &nbsp;•&nbsp;
+                                    223.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17129628">40% of Americans can't cover a $400 emergency expense</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -195,26 +215,6 @@
                                     2018-05-24 16:45:22 &nbsp;•&nbsp;
                                     51 comments &nbsp;•&nbsp;
                                     222.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17179640">Mastodon 2.4.0</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://github.com/tootsuite/mastodon/releases/tag/v2.4.0">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 14:53:37 &nbsp;•&nbsp;
-                                    84 comments &nbsp;•&nbsp;
-                                    220.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,8 +533,8 @@
                                     <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 12:12:10 &nbsp;•&nbsp;
-                                    114 comments &nbsp;•&nbsp;
-                                    193.0 points
+                                    116 comments &nbsp;•&nbsp;
+                                    194.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 18:20:04.947012</strong>
+            <strong>Last update at 2018-05-29 18:30:05.080655</strong>
         </div>
     </div>
 </div>
