--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -466,6 +466,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17179367">Read first pages of novels, and reveal the author and title if you're hooked</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.recommendmeabook.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=gnomespaceship">gnomespaceship</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 14:20:55 &nbsp;•&nbsp;
+                                    45 comments &nbsp;•&nbsp;
+                                    199.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17175479">Will Kubernetes Collapse Under the Weight of Its Complexity?</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -514,7 +534,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 12:12:10 &nbsp;•&nbsp;
                                     122 comments &nbsp;•&nbsp;
-                                    194.0 points
+                                    195.0 points
                                 </span>
                             </td>
                         </tr>
@@ -535,26 +555,6 @@
                                     2018-05-24 18:49:20 &nbsp;•&nbsp;
                                     319 comments &nbsp;•&nbsp;
                                     192.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165532">Penniless Yogi Baba Ramdev Controls a Billion-Dollar Corporation</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/features/2018-03-15/this-multibillion-dollar-corporation-is-controlled-by-a-penniless-yoga-superstar">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 05:18:04 &nbsp;•&nbsp;
-                                    142 comments &nbsp;•&nbsp;
-                                    190.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 19:00:03.485185</strong>
+            <strong>Last update at 2018-05-29 19:10:03.882504</strong>
         </div>
     </div>
 </div>
