--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17165845">Makita has made a sturdy coffee machine aimed at construction workers</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.alphr.com/technology/1008859/makita-coffee-maker-drill-batteries">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=edward">edward</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 06:59:35 &nbsp;•&nbsp;
+                                    87 comments &nbsp;•&nbsp;
+                                    106.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -195,26 +215,6 @@
                                     2018-05-27 08:28:14 &nbsp;•&nbsp;
                                     20 comments &nbsp;•&nbsp;
                                     102.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181046">UTC Is Enough for Everyone, Right?</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://zachholman.com/talk/utc-is-enough-for-everyone-right">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 17:10:49 &nbsp;•&nbsp;
-                                    47 comments &nbsp;•&nbsp;
-                                    100.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 19:30:03.927699</strong>
+            <strong>Last update at 2018-05-29 19:40:04.006552</strong>
         </div>
     </div>
 </div>
