--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178565">Facebook Tools Are Used to Screen Out Older Job Seekers, Lawsuit Claims</a>
+                                    <a href="https://news.ycombinator.com/item?id=17142183">U.S. Launches Criminal Probe into Bitcoin Price Manipulation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 12:40:55 &nbsp;•&nbsp;
-                                    306 comments &nbsp;•&nbsp;
-                                    305.0 points
+                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-24/bitcoin-manipulation-is-said-to-be-focus-of-u-s-criminal-probe">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=sdfx">sdfx</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 08:37:24 &nbsp;•&nbsp;
+                                    215 comments &nbsp;•&nbsp;
+                                    306.0 points
                                 </span>
                             </td>
                         </tr>
@@ -286,14 +286,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17129678">DigitalMars C/C++ Compiler</a>
+                                    <a href="https://news.ycombinator.com/item?id=17179367">Read first pages of novels, and reveal the author and title if you're hooked</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/DigitalMars/Compiler/tree/master/dm/src/dmc">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tomcam">tomcam</a></strong> &nbsp;•&nbsp;
-                                    2018-05-22 21:45:47 &nbsp;•&nbsp;
-                                    156 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.recommendmeabook.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=gnomespaceship">gnomespaceship</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 14:20:55 &nbsp;•&nbsp;
+                                    71 comments &nbsp;•&nbsp;
                                     285.0 points
                                 </span>
                             </td>
@@ -315,26 +315,6 @@
                                     2018-05-26 01:10:31 &nbsp;•&nbsp;
                                     59 comments &nbsp;•&nbsp;
                                     284.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17179367">Read first pages of novels, and reveal the author and title if you're hooked</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://www.recommendmeabook.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=gnomespaceship">gnomespaceship</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 14:20:55 &nbsp;•&nbsp;
-                                    69 comments &nbsp;•&nbsp;
-                                    279.0 points
                                 </span>
                             </td>
                         </tr>
@@ -455,6 +435,26 @@
                                     2018-05-28 13:46:51 &nbsp;•&nbsp;
                                     157 comments &nbsp;•&nbsp;
                                     266.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17181046">UTC Is Enough for Everyone, Right?</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://zachholman.com/talk/utc-is-enough-for-everyone-right">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 17:10:49 &nbsp;•&nbsp;
+                                    128 comments &nbsp;•&nbsp;
+                                    263.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-29 21:40:04.053761</strong>
+            <strong>Last update at 2018-05-29 21:50:04.438090</strong>
         </div>
     </div>
 </div>
